--- a/src/components/ResultsPage.module.css
+++ b/src/components/ResultsPage.module.css
@@ -3,12 +3,16 @@
   padding: 2rem;
   border-radius: 1rem;
   text-align: center;
-  background: rgba(255, 255, 255, 0.05); /* Légèrement translucide, ou remplace si besoin */
-  backdrop-filter: blur(4px); /* Verre dépoli */
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(5px); /* Verre dépoli */
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   transition: background 0.5s ease, color 0.5s ease;
 }
 
 .endingImage {
   max-height: 500px;
+}
+
+p {
+  text-align: left;
 }
